<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/beige">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="26dp"
        android:textColor="@color/burgundy"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="50sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description2"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/green"
        android:fontFamily="sans-serif-light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:textAlignment="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center">

            <EditText
                android:id="@+id/fruitsCount"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/fruitsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruitlabel"
                android:textColor="@color/brown"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center">

            <EditText
                android:id="@+id/veggiesCount"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/veggiesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veggielabel"
                android:textColor="@color/brown"
                android:textSize="18sp" />
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <TextView
            android:id="@+id/slideTwoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:fontFamily="sans-serif-light"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slideTwoNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:fontFamily="sans-serif-light"
            android:clickable="true"
            android:focusable="true"/>


    </LinearLayout>

</LinearLayout>