<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="@color/burgundy"
        android:textSize="26dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/description1"
        android:textColor="@color/green"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingTop="30sp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/gender"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingRight="30dp"
                android:text="@string/gender"
                android:textColor="@color/brown"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:spinnerMode="dropdown"
                android:visibility="visible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/age"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/age"
                android:textColor="@color/brown"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/ageSpinner"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:paddingTop="15sp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/activityLevel"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/activity"
                android:textColor="@color/brown"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/activitySpinner"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:paddingRight="10dp" />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slideOneNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>